--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="Width=width-device, initial-scale=1.0">
         <title>Desafio do site</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./imagens/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -34,8 +34,8 @@
                     <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="noopener noreferrer"> Dan Morrill </a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" rel="noopener noreferrer"> Inkscape </a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
                     </p>
                     <picture>
-                        <source media="(max-width: 750px)" srcset="../imagens\dan-droids-pq.png" type="image/png">
-                        <img src="../imagens/dan-droids.png" alt="Dandroids">
+                        <source media="(max-width: 750px)" srcset="./imagens\dan-droids-pq.png" type="image/png">
+                        <img src="./imagens/dan-droids.png" alt="Dandroids">
                     </picture>
                     <p>Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os <strong style="color: #1a5c37;"> Dandroids </strong>.
                     </p>
@@ -43,13 +43,13 @@
                 <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank" rel="noopener noreferrer"> Irina Blok </a>, também funcionária do <strong style="color: #1a5c37;"> Google </strong>, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.
                 </p>
                 <picture>
-                    <source media="(max-width: 750px)" srcset="../imagens\irina-blok-pq.jpg" type="image/jpg">
-                    <img src="../imagens/irina-blok.jpg" alt="irina blok">
+                    <source media="(max-width: 750px)" srcset="./imagens\irina-blok-pq.jpg" type="image/jpg">
+                    <img src="./imagens/irina-blok.jpg" alt="irina blok">
                 </picture>
                 <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do <strong style="color: #1a5c37;"> Android </strong>.
                 </p>
                 <picture>
-                    <img class="pequena" src="../imagens/bugdroid.png" alt="bugdroid">
+                    <img class="pequena" src="./imagens/bugdroid.png" alt="bugdroid">
                 </picture>
                 <p>A principal inspiração para os traços do novo Bugdroid veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do Google e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.
                 </p>
@@ -77,7 +77,7 @@
                     <li>5.0 - <abbr title="Pirulito"> Lolipop</abbr></li>
                     <li>6.0 - <abbr title="Marshmallow"> Marshmallow</abbr></li>
                     <li>7.0 - <abbr title="Torrone"> Nougat</abbr></li>
-                    <li>8.0 - <abbr title="Oreo"> Oreo</abbr>/li>
+                    <li>8.0 - <abbr title="Oreo"> Oreo</abbr></li>
                     <li>9.0 - <abbr title="Torta"> Pie</abbr></li>
                 </ul>
             </div>
